# open-banking-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sqlfluff  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
contracts/: _subjects_ledger.json  canonical_account.json  canonical_transaction.json  landing_accounts.json  landing_transactions.json
contracts/consumers/: categorization_engine.json  spend_mart.json
docs/: brief.md
docs/adr/: 0000-adr-template.md  0001-canonical-schema-and-mock-bank-strategy.md  0003-mock-api-shapes-and-ingestion-architecture.md  0004-data-contracts-and-breaking-change-detection.md  0005-categorization-and-spend-mart.md  0006-e2e-validation-and-definition-of-done.md
fixtures/fjellvik/: accounts.json  transactions_FV-ACC-001.json  transactions_FV-ACC-002.json
fixtures/fjord/: accounts.json  transactions_FJ-ACC-001.json  transactions_FJ-ACC-002.json
fixtures/granite/: accounts.json  transactions.json
fixtures/krono/: accounts.csv  transactions_export.csv
fixtures/marlstone/: accounts.json  transactions.json
fixtures/taktwerk/: accounts.csv  transactions_export.csv
src/open_banking_pipeline/: __init__.py  __main__.py  canonical.py  categorization.py  cli.py  errors.py  mart.py  mart_cli.py
src/open_banking_pipeline/adapters/: __init__.py  fjellvik.py  marlstone.py  taktwerk.py
src/open_banking_pipeline/contracts/: __init__.py  cli.py  consumers.py  diff.py  generate.py  ledger.py  model.py  versions.py
src/open_banking_pipeline/ingestion/: __init__.py  landing.py  retry.py  runner.py
src/open_banking_pipeline/mock_banks/: __init__.py  failures.py  fjellvik.py  marlstone.py  taktwerk.py
standards/: clean-sql.md  dbt-standards.md  engineering-principles.md  git-workflow.md  python-standards.md
tests/: conftest.py  test_adapters.py  test_canonical_models.py  test_categorization.py  test_categorization_wiring.py  test_cli.py  test_contract_cli.py  test_contract_consumers.py  test_contract_diff.py  test_contract_generation.py  test_contract_ledger.py  test_contract_model.py  test_e2e_pipeline.py  test_failure_plans.py  test_fixture_integrity.py  test_ingestion_runner.py  test_landing_store.py  test_mart_cli.py  test_mock_banks.py  test_retry.py  test_smoke.py  test_spend_mart.py
