[project]
name = "open-banking-pipeline"
version = "0.1.0"
description = "Multi-bank PSD2-style ingestion into a canonical, categorized transaction schema with data contracts"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "pydantic>=2.13.4",
]

[project.scripts]
open-banking-ingest = "open_banking_pipeline.cli:main"
open-banking-contracts = "open_banking_pipeline.contracts.cli:main"
open-banking-mart = "open_banking_pipeline.mart_cli:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8", "pre-commit>=4.0", "pdoc>=14.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ARG", "PTH", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
